fix word break in image

--- a/src/components/PlayCard.scss
+++ b/src/components/PlayCard.scss
@@ -28,7 +28,7 @@
     align-items: center;
     text-align: center;
     padding: 15px;
-    hyphens: auto;
-    word-break: break-word;
+    // hyphens: auto;
+    word-break: break-all;
   }
 }
